--- a/i.html
+++ b/i.html
@@ -21,6 +21,7 @@
 <body>
   <div class="container-fluid">
     <h1 class="text-center">Wonderful Oceans And Life Within</h1>
+    <h1 class="text-center"> By - Sandeep Kumar Patel</h1>
     <p class="text-center">The oceans cover more than 70 per cent of the Earth's surface and the majority of life on Earth is aquatic.</p>
     <div class="d-flex flex-wrap justify-content-center">
       <div class="d-flex flex-column">
