--- a/i.html
+++ b/i.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <title>Bootstrap - Image gallery 1</title>
+  <title>BMJ Image gallery 1</title>
   <style>
     .flex-column {
       max-width: 250px;
